@@ -3,7 +3,6 @@
 DISABLE_VARS="external|yes|FORCE_IN_TREE_DEPENDENCIES"
 DISABLE_FORCE_IN_TREE_DEPENDENCIES_DOC="force in-tree dependencies, even when a system library is available"
 
-ENABLE_VARS="csc|yes|ENABLE_CSC doboz|yes|ENABLE_DOBOZ zling|yes|ENABLE_ZLING"
+ENABLE_VARS="csc|yes|ENABLE_CSC doboz|yes|ENABLE_DOBOZ"
 ENABLE_DOBOZ_DOC="enable doboz plugin (disabled due to bugs)"
-ENABLE_ZLING_DOC="enable zling plugin (disabled due to bugs)"
 ENABLE_CSC_DOC="enable csc plugin (disabled due to bugs)"
