@@ -5,7 +5,9 @@ set (zling_sources
   libzling/src/libzling_lz.cpp
   libzling/src/libzling_utils.cpp)
 
-if ("${ENABLE_ZLING}" STREQUAL "yes")
-  squash_plugin_add (zling zling_sources)
-  squash_plugin_add_include_directories (zling libzling/src)
-endif ()
+squash_plugin_add (zling zling_sources)
+squash_plugin_add_include_directories (zling libzling/src)
+
+foreach (file ${zling_sources})
+  squash_source_file_add_compile_flag ("${file}" "-Wno-undef")
+endforeach ()
